--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -10,25 +10,28 @@
      android:id="@+id/text_view_welcome_msg"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
-     android:layout_marginBottom="16dp"
-     app:layout_constraintStart_toStartOf="parent"
-     app:layout_constraintEnd_toEndOf="parent"
-     app:layout_constraintTop_toTopOf="parent"
+     android:layout_marginTop="24dp"
+     android:text="@string/msg_welcome"
      android:textColor="@color/blue_teal_dark"
      android:textSize="24sp"
      android:textStyle="bold"
-     android:text="@string/msg_welcome" />
+     android:clickable="true"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent" />
 
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/horizontal_recview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
+     android:layout_marginTop="16dp"
      android:orientation="horizontal"
      android:scrollbars="horizontal"
+     app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_view_welcome_msg"
-     app:layout_constraintBottom_toBottomOf="parent"
-     app:layout_constraintEnd_toEndOf="parent"
      tools:listitem="@layout/item_view_items" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
