implement view binding and update navigation dependency versions

--- a/app/src/main/res/layout/item_view_items.xml
+++ b/app/src/main/res/layout/item_view_items.xml
@@ -13,7 +13,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <include layout="@layout/layout_card_item" />
+        <include
+            android:id="@+id/card_item"
+            layout="@layout/layout_card_item" />
 
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
