--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -38,7 +38,7 @@
      android:layout_marginVertical="8dp"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="8dp"
-     android:text="Nearby"
+     android:text="@string/str_nearby"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:textStyle="bold"
